package com.ilike.proxy.cglib;


public class TeacherDao  {

    public void teach() {
        System.out.println("老师授课中,我是cglib代理");
    }


}
